02-hello-kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes
  labels:
    app.kubernetes.io/name: hello-kubernetes
    app.kubernetes.io/component: application
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: hello-kubernetes
      app.kubernetes.io/component: application
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hello-kubernetes
        app.kubernetes.io/component: application
    spec:
      containers:
      - name: hello-kubernetes
        image: ghcr.io/thenativeweb/tlse2021-kubernetes
        ports:
        - name: http
          containerPort: 4000
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 15
        livenessProbe:
          httpGet:
            path: /
            port: http
          initialDelaySeconds: 15
      imagePullSecrets:
      - name: docker-ghcr
      automountServiceAccountToken: false
