02-hello-kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-kubernetes
  labels:
    app.kubernetes.io/name: hello-kubernetes
    app.kubernetes.io/component: service
spec:
  selector:
    app.kubernetes.io/name: hello-kubernetes
    app.kubernetes.io/component: application
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
